# portfolio-analyzer

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/ai/: base.py  claude_provider.py  openai_provider.py  prompts.py  registry.py
backend/app/brokers/: base.py  registry.py  zerodha.py
backend/app/market/: base.py  registry.py  yfinance_provider.py
backend/app/models/: account.py  cash.py  holding.py  ledger.py  transaction.py  watchlist.py
backend/app/routers/: accounts.py  auth.py  holdings.py  insights.py  ledger.py  market.py  portfolio.py  transactions.py  watchlist.py
backend/app/schemas/: account.py  holding.py  ledger.py  portfolio.py  transaction.py  watchlist.py
backend/app/services/: holdings_derivation.py  import_csv.py  import_ledger.py  insights.py  market_hours.py  portfolio.py  price_refresh.py  sync.py  xirr.py
backend/tests/: test_ai_batch.py  test_api.py  test_ledger.py  test_market.py  test_market_hours.py  test_portfolio.py  test_xirr.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/: AiAnalysisButton.tsx  EntryZone.tsx  ExternalGenerate.tsx  HoldingDetailModal.tsx  QuoteChange.tsx  StockDetail.tsx  WatchlistPlan.tsx
frontend/src/context/: AccountContext.tsx  StockModalContext.tsx
frontend/src/hooks/: useAccounts.ts  useInsights.ts  useMarket.ts  usePortfolio.ts  (+2 more)
(+13 files in other folders)
